Bug 75110 - EDITING - crash after deleting all and undoing the deletion in a document with tables
Summary: EDITING - crash after deleting all and undoing the deletion in a document wit...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.3.0 target:4.2.3
Keywords: regression
: 76265 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-02-17 18:02 UTC by Milos Sramek
Modified: 2015-04-02 21:59 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
a file demonstraing the bug (sorry fo forgetting it) (847.50 KB, application/msword)
2014-02-20 13:04 UTC, Milos Sramek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Milos Sramek 2014-02-17 18:02:12 UTC
Hi,

if I open the attached file a-orig.doc in LO 4.2.1.1, then select everything, delete the selection and then undo the deletion (CTRL-A, CTRL-X, CTRL-Z), Writer crashes.
I've converted the file to odt and docx formats by MSOffice 2013 and LO40 and then opened them by LO 4.2.1.1 - with the same result. So, the bug is
perhaps related to the improved functionality of CTRL-A, which in contrast with
LO40 and LO41 selects (nearly) all text.

--
Milos
Comment 1 Dominique Boutry 2014-02-20 12:49:36 UTC
The "attached file a-orig.doc" isn't attached...
Comment 2 Milos Sramek 2014-02-20 13:04:39 UTC
Created attachment 94431 [details]
a file demonstraing the bug (sorry fo forgetting it)
Comment 3 Dominique Boutry 2014-02-20 13:52:33 UTC
Reproduced with LibO 4.2.0.4 on Win7.

After the crash, the recovery is announced as successful, but it is not the case, the recovered text is on a page 2 while the original text had only one page. So the misbehaviour may be tied to the precise content of attachement 94431 (a mix of text, tables and pictures).
 
Visually one can see that the "select all" doesn't select all, it doesn't select the pages header ans footer, nor the table line beginning with "Replace with dates (from - to)...".

No crash when tried with a NEW document, filled with simple lines. I cann't yet provide a step-by-step from a NEW document. I continue trying...
Comment 4 sophie 2014-03-07 16:27:34 UTC
Confirmed with Version: 4.2.2.1
Build ID: 3be8cda0bddd8e430d8cda1ebfd581265cca5a0f - Set as New - Sophie
Comment 5 Björn Michaelsen 2014-03-07 21:51:43 UTC
possibly related/dupe of fdo#75898/fdo#74854.
Comment 6 Björn Michaelsen 2014-03-07 22:07:26 UTC
reproduced on current master, not reproduced on 4.1.4. => regression
Comment 7 Miklos Vajna 2014-03-12 16:23:22 UTC
I'll take care of this.
Comment 8 Commit Notification 2014-03-12 17:12:22 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f9b62506b22c3eb885ffd5a4ec8025c33df7b2d4

fdo#75110 SwEditShell::DeleteSel fix start of selection when bSelAll == true



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Miklos Vajna 2014-03-12 17:19:19 UTC
-4-2 review: https://gerrit.libreoffice.org/8559
Comment 10 Commit Notification 2014-03-13 09:55:50 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fea99d32aec1c24b7cbc7a4063b21a471072509b&h=libreoffice-4-2

fdo#75110 SwEditShell::DeleteSel fix start of selection when bSelAll == true


It will be available in LibreOffice 4.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2014-03-14 20:50:07 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-2-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8f4324d0f407868a5dcc71c8ffcafaf9809f3b8f&h=libreoffice-4-2-3

fdo#75110 SwEditShell::DeleteSel fix start of selection when bSelAll == true


It will be available already in LibreOffice 4.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Björn Michaelsen 2014-03-17 14:57:23 UTC
*** Bug 76265 has been marked as a duplicate of this bug. ***