fdo#75110 SwEditShell::DeleteSel fix start of selection when bSelAll == true

(cherry picked from commit f9b62506b22c3eb885ffd5a4ec8025c33df7b2d4)

Conflicts:
	sw/qa/extras/uiwriter/uiwriter.cxx

Change-Id: I3e8ce585b29619061b18ab1ab8f0cf6c7d421074
Reviewed-on: https://gerrit.libreoffice.org/8559
Reviewed-by: Björn Michaelsen <bjoern.michaelsen@canonical.com>
Tested-by: Björn Michaelsen <bjoern.michaelsen@canonical.com>
(cherry picked from commit fea99d32aec1c24b7cbc7a4063b21a471072509b)
Reviewed-on: https://gerrit.libreoffice.org/8571
Tested-by: Michael Stahl <mstahl@redhat.com>
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>